[package]
name = "download"
version = "1.0.0"
edition = "2021"
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/download-rs"
description = "Provides some simple-to-use wrappers for downloading and managing files from the internet."


[dependencies]
async-compression = { version = "0.4", features = ["tokio","gzip"], optional = true }
console = { version = "0.15", optional = true }
flate2 = { version = "1.1", optional = true }
hex = { version = "0.4", optional = true }
indicatif = { version = "0.17", optional = true }
log = { version = "0.4", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "stream"], optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
tokio = { version = "1.44", default-features = false, features = ["fs"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tar = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }


[dev-dependencies]
hex-literal = { version = "1.0.0" }
rand = { version = "0.9.0" }
tempfile = { version = "3.19.1" }
tokio-test = { version = "0.4.4" }


[features]
default = ["download"]

log = ["dep:log"]
async = ["async-tokio"]
async-tokio = ["dep:async-compression", "dep:tokio", "dep:tokio-stream", "dep:tokio-tar"]

download = ["dep:console", "dep:hex", "dep:indicatif", "dep:reqwest", "dep:sha2", "dep:url"]
archives = ["tar"]
tar = ["dep:flate2", "dep:tar"]

# rustls features
# simply mirrors their features regarding TLS
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["native-tls", "reqwest/native-tls-alpn"]
native-tls-vendored = ["native-tls", "reqwest/native-tls-vendored"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-no-provider = ["reqwest/rustls-tls-no-provider"]

rustls-tls-manual-roots-no-provider = ["reqwest/rustls-tls-manual-roots-no-provider"]
rustls-tls-webpki-roots-no-provider = ["reqwest/rustls-tls-webpki-roots-no-provider"]
rustls-tls-native-roots-no-provider = ["reqwest/rustls-tls-native-roots-no-provider"]

rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
